added the service folder and changed the menu

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <a href="./projects/buildingbanter.html">Building Banter. Industrial Energy Monitoring. Data Vis. Behaviour Change.</a>
           <a href="./projects/classic4.html">Classic 4. EAP TENS Accupuncture</a>
           <a href="./projects/nanode.html">Nanode. Open Source Hardware for Makers</a>
-          <a href="./projects/ltfhc.html">Solar Electronic Medical Records</a>
+          <a href="./projects/ltfhc.html">Solar Powered HF Radio Synchronised Electronic Medical Records System</a>
           <a href="./projects/thinkfarm.html">Sustainability Research @Thinkfarm, Berlin</a>
           <a href="./projects/ose.html">Open Source Ecology, USA</a>          
         </div>
@@ -94,29 +94,29 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         </div>
         <div class="collapsed">
           <span>Service > Programming</span>
-          <a href="index.php?id=Programming">Examples of My Work</a>
+          <a href="./service/programming.html">Examples of My Work</a>
         </div>        
         <div class="collapsed">
-          <span>Service > Webdesign</span>
-          <a href="index.php?id=CaseStudies">Case Studies</a>
-          <a href="index.php?id=Webdesign">Examples of My Work</a>
+          <span>Service > Webdev</span>
+          <a href="./service/web.html">Webdesign and Development</a>          
+          <a href="./service/web_examples.html">Examples of My Work</a>
+          <a href="./service/web_feedback.html">Client Feedback</a>          
         </div>
         <div class="collapsed">
           <span>Service > PC Repair</span>
-          <a href="index.php?id=Reviews">Reviews</a>
-          <a href="index.php?id=PcRepair">Book a Repair</a>
-          <a href="index.php?id=Remote">Remote Support</a>
-          <a href="index.php?id=ServiceArea">Service Area</a>
+          <a href="./service/onsite_repair.html">Onsite Support</a>
+          <a href="./service/remote_repair.html">Remote Support</a>
+          <a href="./service/repair_feedback.html">Reviews</a>
         </div>
         <div class="collapsed">
           <span>Service > Clients</span>
-          <a href="index.php?id=Reviews">Current Clients</a>          
-          <a href="index.php?id=Reviews">Previous Clients</a>
+          <a href="./service/current_clients.html">Current Clients</a>          
+          <a href="./service/previous_clients.html">Previous Clients</a>
         </div>      
         <div class="collapsed">
           <span>Service > Personal</span>
-          <a href="index.php?id=Reviews">Personal Coaching</a>
-          <a href="index.php?id=Reviews">Business Development</a>          
+          <a href="./service/mentoring.html">Mentoring</a>
+          <a href="./service/business_development.html">Business Development</a>          
         </div>        
       </div>
     </div>
