--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <a href="./projects/reprap.html">3D Printing. Reprap</a>          
           <a href="./projects/animachine.html">Animachine</a>
           <a href="./projects/buildingbanter.html">Building Banter. Industrial Energy Monitoring. Data Vis. Behaviour Change.</a>
-          <a href="./projects/classic4.html">Classic 4. EAP TENS Accupuncture</a>
+          <a href="./projects/classic4.html">Classic 4: EAP / TENS Accupuncture</a>
           <a href="./projects/nanode.html">Nanode. Open Source Hardware for Makers</a>
           <a href="./projects/ltfhc.html">Solar Powered HF Radio Synchronised Electronic Medical Records System</a>
           <a href="./projects/thinkfarm.html">Sustainability Research @Thinkfarm, Berlin</a>
@@ -142,7 +142,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <div id="about-section">
         <span class="subheader-text">About Me</span>
         <div class="about-section-content">
-          <div class="body-text"> I establish technical infrastructure and social patterns that enable collaboration and participation, facilitate and inspire teams, and create and promote the use of civic media and disruptive technologies — from 3D printers to etherpads to apps for direct action. I am the co-founder of Sukey, a platform to keep demonstrators safe, mobile, and informed. I founded OccupyLSX tech, and am a key contributor to Cryptoparty, founding CryptopartyLondon with some friends, and been known to go all-in on initiatives like Hurricane Hackers. I have also worked in industry with companies and for clients. Participating in whichever local Hackspace there is as I travel the world, I repair and hack everything I own, and help the others I meet to become empowered by and involved with hacker culture. I hold a BEng with honors from Durham University, and I am a member of the Institution of Engineering and Technology (IET).</div>
+          <div class="body-text">I am an experienced technologist who establishes technical infrastructure and fosters social patterns that enable collaboration, participation, and innovation. As a co-founder of Sukey, I helped create a platform to keep demonstrators safe, mobile and informed. Additionally, I've been involved with other initiatives like UCLOccupation, OccupyLSX tech, CryptopartyLondon, Hurricane Hackers, Open Source Ecology. I have also had the experience of living in an Eco Village for 5 years. My background includes working in industry for various companies while participating in local Hackspace communities around the world. Embracing hacker culture, I repair and modify my own belongings as well as assisting others to become more empowered through this approach. I hold a BEng with honors from Durham University and am a member of the Institution of Engineering and Technology (IET). Overall, my work focuses on creating transformative solutions using open source hardware and software and civic media tools such as 3D printers or apps designed for direct action while promoting positive change through global collaborative efforts.</div>
         </div>
       </div>
       <!-- PROJECTS / MY WORK SECTION -->
@@ -188,7 +188,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
               <div class="subheader-text project-title">EcoVillage</div>
               <div class="body-text project-card-text">Practising voluntary minimalism, learning about forest ecology, community living, permaculture, medicinal and edible herbs. Forest bathing.</div>
             </div>
-            <a class="button" href="./project-pages/project-ecovillage.html">
+            <a class="button" href="./actions/ecovillage.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
             </a>
