added some more photos from harmony about the classic 4 and firmware development

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         </div>
         <div class="collapsed">
           <span>Portfolio > Projects</span>
-          <a href="./projects/reprap.html">3D Printing. Reprap</a>          
-          <a href="./projects/animachine.html">Animachine</a>
+          <a href="./projects/reprap.html">Reprap Opensource 3D Printer</a>          
+          <a href="./projects/animachine.html">Animachine @Youin3D, Berlin</a>
           <a href="./projects/buildingbanter.html">Building Banter. Industrial Energy Monitoring. Data Vis. Behaviour Change.</a>
           <a href="./projects/classic4.html">Classic 4: EAP / TENS Accupuncture</a>
           <a href="./projects/nanode.html">Nanode. Open Source Hardware for Makers</a>
