--- a/projects/classic4.html
+++ b/projects/classic4.html
@@ -80,6 +80,9 @@ Large back-lit LCD screen 128 x 128 dots.
         </div>
       </div>
 
+harmony001.jpg  harmony003.jpg  harmony005.jpg  harmony007.jpg
+harmony002.jpg  harmony004.jpg  harmony006.jpg  harmony008.jpg
+
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
@@ -87,17 +90,37 @@ Large back-lit LCD screen 128 x 128 dots.
         <div class="project-gallery-content">
 
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/harmony001.jpg" class="gallery-image">
+              <span class="image-caption">My office at Harmony Medical. Nice and quiet, perfect for firmware development / coding. :)</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/harmony002.jpg" class="gallery-image">
+              <span class="image-caption">My old desk (filled with engineering notes, maths textbooks and books about programming and hacking).</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/harmony003.jpg" class="gallery-image">
+              <span class="image-caption">Photo from the other end of the room.</span>
             </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/harmony004.jpg" class="gallery-image">
+              <span class="image-caption">Soldering station and hardware hacking area for protoyping electronics.</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/harmony005.jpg" class="gallery-image">
+              <span class="image-caption">Trusty pillar drill.</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/harmony006.jpg" class="gallery-image">
+              <span class="image-caption">Another photo from the prototyping / hardware lab on the top floor.</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/harmony007.jpg" class="gallery-image">
+              <span class="image-caption">Electronic Components</span>
+            </div>  
+            <div class="gallery-image-container">
+              <img src="../assets/images/harmony008.jpg" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>                                                            
         </div>
       </div>
     </div>
