added photos and new pages: engineering, security and sustainability

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <span>Portfolio > Projects</span>
           <a href="./projects/reprap.html">Reprap Opensource 3D Printer</a>          
           <a href="./projects/animachine.html">Animachine @Youin3D, Berlin</a>
-          <a href="./projects/buildingbanter.html">Building Banter. Industrial Energy Monitoring. Data Vis. Behaviour Change.</a>
-          <a href="./projects/classic4.html">Classic 4: EAP / TENS Accupuncture</a>
-          <a href="./projects/nanode.html">Nanode. Open Source Hardware for Makers</a>
-          <a href="./projects/ltfhc.html">Solar Powered HF Radio Synchronised Electronic Medical Records System</a>
+          <a href="./projects/buildingbanter.html">Industrial Energy Monitoring. Data Vis. Behaviour Change. "Building Banter" @Moixa, London</a>
+          <a href="./projects/classic4.html">Classic 4: EAP / TENS Accupuncture @Harmony, London</a>
+          <a href="./projects/nanode.html">Network Open Source Hardware for Makers, London</a>
+          <a href="./projects/ltfhc.html">Solar Powered HF Radio Synchronised Electronic Medical Records System @Iilab, Berlin</a>
           <a href="./projects/thinkfarm.html">Sustainability Research @Thinkfarm, Berlin</a>
           <a href="./projects/ose.html">Open Source Ecology, USA</a>          
         </div>
@@ -88,7 +88,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         </div>        
         <div class="collapsed">
           <span>Service > Consulting</span>
-          <a href="./service/engineereing.html">Engineering</a>
+          <a href="./service/engineering.html">IT / Engineering</a>
           <a href="./sevice/security.html">Security</a>
           <a href="./service/sustainability.html">Sustainability</a>          
         </div>
