--- a/projects/classic4.html
+++ b/projects/classic4.html
@@ -34,18 +34,22 @@
       <div id="project-header">
 
         <div class="main-title">Classic 4</div>
-        <div class="body-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python.</div>
+        <div class="body-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python. As a Firmware Engineer and lead on the Classic 4 Electro Acupuncture/TENS treatment device project, my main focus was software development of the device firmware. I enhanced UI/UX, expanded its treatment modes, and improved user control via keypad. My contributions included bug fixes, adding features, removing unnessary code and in some cases extensive refactoring all within the software development processes outlined in "IEC 62304 – medical device software – software life cycle processes" and of a sufficient quality to pass a rigourous audit. The development involved embedded software programming in CPP, C, and PIC assembly.</div>
         <image class="project-header-image" src="../assets/images/classic4.jpg">
       </div>
 
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">More Details</div>
         <div class="project-details-content">
-          <div class="body-text">As a Firmware Engineer working on the Classic 4 Electro Accupuncture/TENS treatment device I made various hardware and software contributions to improve UI / UX, increase the number of treatment modes and make it easier for users to control the device via the keypad. Mostly this consisted of embedded software development in CPP, C and PIC programming in assembly.</div>
+<div class="body-text">As the Lead Firmware Engineer on the Classic 4 Electro Acupuncture/TENS treatment device project, I played a pivotal role in making major hardware and software enhancements to elevate user experience. Involved in various stages of development—from prototype to post-production Q&A—I contributed significantly throughout the medical device's life cycle, including both software and hardware alterations.
+Although I wasn't part of the initial design phase, I took charge of firmware (embedded engineering) development and effectively guided the product towards a successful market launch.</div>
+<div class="body-text">One critical area was refining UI/UX by simplifying controls through keypad input modifications that allowed users to navigate seamlessly between various functionality options more accessible. Additionally, I increased available treatment modes giving users greater flexibility in their therapy choices.</div>
+<div class="body-text">To ensure reliability and usability of our product throughout the process; my technical work also focused on improving the quality of the codebase by testing and debugging issues found in the existing code (I inherited well over 9,000 lines of cpp code written by a total of 3 different authors). Sometimes it was smooth sailing and sometimes I had to implement major refactors but the reward was cleaner, more reliable code and increased device performance.</div>
+<div class="body-text">​Moreover, adhering to strict regulatory requirements for medical devices was crucial to ensure the product could be sold in both the UK and European markets. As this device would likely be utilized in settings with sensitive equipment, such as hospitals, it was imperative that it did not interfere with other devices' operations. To achieve this, we designed and were audited according to "IEC 62304 – medical device software – software life cycle processes". This process involved meticulous documentation practices and stringent testing procedures, as well as a revision of the mainboard to enhance electromagnetic compatibility (EMC) of the device. By doing so, we minimized interference between our product and surrounding equipment, making it safer and more reliable for use in professional environments.</div>
           <div class="body-text">
-<pre>
-Here are some details about the device's capabilities, modes and features:
+                  <div class="subheader-text">About the Device: Classic 4</div>
+<pre>Here are some details about the device's capabilities, modes and features:
 -Ability to treat different patterns with different electricity parameters.
 -Capable of tonify one channel and sedate another channel at the same time.
 -Acting concurrently as electro-acupuncture stimulator and TENS / MNS unit.
@@ -80,9 +84,6 @@ Large back-lit LCD screen 128 x 128 dots.
         </div>
       </div>
 
-harmony001.jpg  harmony003.jpg  harmony005.jpg  harmony007.jpg
-harmony002.jpg  harmony004.jpg  harmony006.jpg  harmony008.jpg
-
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
@@ -115,11 +116,11 @@ harmony002.jpg  harmony004.jpg  harmony006.jpg  harmony008.jpg
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/harmony007.jpg" class="gallery-image">
-              <span class="image-caption">Electronic Components</span>
+              <span class="image-caption">Electronic Components.</span>
             </div>  
             <div class="gallery-image-container">
               <img src="../assets/images/harmony008.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">More Components.</span>
             </div>                                                            
         </div>
       </div>
