--- a/projects/thinkfarm.html
+++ b/projects/thinkfarm.html
@@ -34,7 +34,7 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
 
-        <div class="main-title">Project Name</div>
+        <div class="main-title">Sustainability Research</div>
         <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
