changed some headings and a bit of text

--- a/service/security.html
+++ b/service/security.html
@@ -25,10 +25,10 @@
     <div id="main-content">
       <!-- PROJECT HEADER -->
       <div id="project-header">
-        <div class="main-title">Cybersecurity Expert/Consultant</div>
-        <div class="body-text">Together, we can create personalized security strategies, reliable network designs, and custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
+        <div class="main-title">Cybersecurity Consultant / Security Engineering</div>
+        <div class="body-text">Together we can create personalized security strategies, reliable network or hardware designs or custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
         <div id="project-details">
-          <div class="subheader-text">Project Details / Background</div>
+          <div class="subheader-text">Background</div>
           <div class="project-details-content">
             <div class="body-text">With a strong background in technology and engineering and over 13 years of experience actively participating in the hacker scene, from grassroots and the underground to industry including involvement with groundbreaking movements such as the Cryptoparty Movement and the Chaos Computer Club (CCC), I am well-equipped to offer my expertise as a Cybersecurity Expert/Consultant. My primary goal is to utilize my extensive knowledge of security to help orginisations engaged in social change and ethical businesses to protect their digital assets from cyber threats effectively. <br>
                 <br>
