Changed the order of the text and added some text to bridge the concepts of security engineering and cyber security consulting.

--- a/service/security.html
+++ b/service/security.html
@@ -25,8 +25,20 @@
     <div id="main-content">
       <!-- PROJECT HEADER -->
       <div id="project-header">
+<div class="subheader-text">Services Offered as a Security Engineer</div>
+<div class="body-text">
+In the age where most devices have an IP address, Security Engineering in Hardware Design and Product Development is more critical than ever. It is important therefore to ensure robustness from the ground up.
+
+In today's interconnected world, safeguarding hardware design and product development is crucial to maintaining integrity across all aspects of your business. With our expertise in security engineering, we help you create secure products that protect sensitive information while adhering to industry standards.
+
+Secure Hardware Design: collaborate with your team to develop robust hardware designs that incorporate built-in security features such as encryption modules, tamper detection mechanisms, and secure boot processes – effectively mitigating potential threats at the hardware level.<br><br>
+Supply Chain Protection: evaluate your supply chain for vulnerabilities and implement risk mitigation strategies; ensuring components remain untampered throughout the manufacturing process while minimizing exposure to counterfeit or compromised parts.<br><br>
+Firmware Security: review firmware code for potential vulnerabilities using static analysis tools; identify weaknesses within embedded software that could be exploited by malicious actors seeking unauthorized access or control over devices.<br><br>
+Compliance with Industry Standards: ensure all aspects of product design align with relevant industry standards (e.g., FIPS 140-2, ISO/IEC 15408) for enhanced credibility and customer trust; maintain compliance through regular audits or certifications where necessary.<br><br>
+End-to-end Encryption & Secure Communication Protocols: implement strong end-to-end encryption methods on data transmitted between devices preventing eavesdropping or interception further bolstering privacy protection during data transfers interactions within connected ecosystems.<br><br>
+Regular Hardware Security Audits & Updates: conduct periodic security audits on implemented solutions monitoring any emerging threats adjusting defense mechanisms accordingly provide ongoing support to ensure sustained levels of resilience against evolving cyber attacks and enhancing firmware by providing updates and patches to mitigate newly discovered vulnerabilities in order to maximize longevity of deployed systems.</div>
         <div class="main-title">Cybersecurity Consultant / Security Engineering</div>
-        <div class="body-text">Together we can create personalized security strategies, reliable network or hardware designs or custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
+        <div class="body-text">Having secure hardware and systems is only a part of the puzzle, those systems also exist and are used in the world, by real people and on the public internet. Together we can create personalized security strategies, reliable network or hardware designs or custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
         <div id="project-details">
           <div class="subheader-text">Background</div>
           <div class="project-details-content">
@@ -48,13 +60,6 @@ Security Risk Assessment: conduct comprehensive assessments on your company's di
                 <br> Incident Response Planning: preparing comprehensive incident response plans outlining procedures to follow in case of cybersecurity breaches, ensuring quick containment and minimal damage to your business operations. <br>
                 <br> Regulatory Compliance Assistance: provide guidance on staying compliant with industry-specific regulations such as GDPR, HIPAA, PCI-DSS; guaranteeing that your organization meets all legal requirements minimizing potential fines or penalties due to non-compliance. <br>
                 <br> With my background in Cryptoparty Movement, Chaos Computer Club (CCC), and extensive hands-on experience in cybersecurity, I am confident about assisting businesses in safeguarding their digital assets from ever-evolving cyber threats through strategic planning and effective implementation of robust security practices.</div>
-<div class="subheader-text">Services Offered as a Security Engineer</div>
-<div class="body-text">Secure Hardware Design: collaborate with your team to develop robust hardware designs that incorporate built-in security features such as encryption modules, tamper detection mechanisms, and secure boot processes – effectively mitigating potential threats at the hardware level.<br><br>
-Supply Chain Protection: evaluate your supply chain for vulnerabilities and implement risk mitigation strategies; ensuring components remain untampered throughout the manufacturing process while minimizing exposure to counterfeit or compromised parts.<br><br>
-Firmware Security: review firmware code for potential vulnerabilities using static analysis tools; identify weaknesses within embedded software that could be exploited by malicious actors seeking unauthorized access or control over devices.<br><br>
-Compliance with Industry Standards: ensure all aspects of product design align with relevant industry standards (e.g., FIPS 140-2, ISO/IEC 15408) for enhanced credibility and customer trust; maintain compliance through regular audits or certifications where necessary.<br><br>
-End-to-end Encryption & Secure Communication Protocols: implement strong end-to-end encryption methods on data transmitted between devices preventing eavesdropping or interception further bolstering privacy protection during data transfers interactions within connected ecosystems.<br><br>
-Regular Hardware Security Audits & Updates: conduct periodic security audits on implemented solutions monitoring any emerging threats adjusting defense mechanisms accordingly provide ongoing support to ensure sustained levels of resilience against evolving cyber attacks and enhancing firmware by providing updates and patches to mitigate newly discovered vulnerabilities in order to maximize longevity of deployed systems.</div>
           </div>
         </div>
         <!-- IMAGE GALLERY -->
